logs/Slang/generated/keywords/5.6.2--keyword_generate.sv.log
name: generate
description: The 'generate' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_generate.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_generate.sv:8:8: error: expected declarator
    bit generate;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_generate.sv:9:1: error: expected member
endmodule
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_generate.sv:9:10: error: expected 'endgenerate'
endmodule
         ^
